{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 112,
  "lineage": "8cd766c5-6081-f015-6440-9c8f9309c54e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "MyElasticIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b0c465113825ada",
            "domain": "vpc",
            "id": "eipalloc-03b0c465113825ada",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-22-60-186.compute-1.amazonaws.com",
            "public_ip": "107.22.60.186",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "MyElasitcIpName"
            },
            "tags_all": {
              "Name": "MyElasitcIpName"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyInternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:internet-gateway/igw-018da3d3a74be6623",
            "id": "igw-018da3d3a74be6623",
            "owner_id": "845537495355",
            "tags": {
              "Name": "MyInternetGateway"
            },
            "tags_all": {
              "Name": "MyInternetGateway"
            },
            "vpc_id": "vpc-06c9365ae45f74d90"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "MyNatGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b0c465113825ada",
            "association_id": "eipassoc-08155f3e2dcbe009a",
            "connectivity_type": "public",
            "id": "nat-06b1a736b7af26e89",
            "network_interface_id": "eni-050ab3ecb5d4529df",
            "private_ip": "10.0.0.160",
            "public_ip": "107.22.60.186",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e4cfb9a2b23aabaa",
            "tags": {
              "Name": "MyNategateway"
            },
            "tags_all": {
              "Name": "MyNategateway"
            }
          },
          "dependencies": [
            "aws_eip.MyElasticIp",
            "aws_internet_gateway.MyInternetGateway",
            "aws_subnet.MyPublicSubnet1",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyPrivateRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:route-table/rtb-01eb4a8b5f09050e3",
            "id": "rtb-01eb4a8b5f09050e3",
            "owner_id": "845537495355",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06b1a736b7af26e89",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyPrivateRouteTable"
            },
            "tags_all": {
              "Name": "MyPrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c9365ae45f74d90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.MyElasticIp",
            "aws_internet_gateway.MyInternetGateway",
            "aws_nat_gateway.MyNatGateway",
            "aws_subnet.MyPublicSubnet1",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyPublicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:route-table/rtb-06d334603ebe89be5",
            "id": "rtb-06d334603ebe89be5",
            "owner_id": "845537495355",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-018da3d3a74be6623",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyPublicRouteTable"
            },
            "tags_all": {
              "Name": "MyPublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c9365ae45f74d90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MyInternetGateway",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyPrivateAssociationPrivateSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d104b8b11a035fae",
            "route_table_id": "rtb-01eb4a8b5f09050e3",
            "subnet_id": "subnet-0aa069120606a111d"
          },
          "dependencies": [
            "aws_eip.MyElasticIp",
            "aws_internet_gateway.MyInternetGateway",
            "aws_nat_gateway.MyNatGateway",
            "aws_route_table.MyPrivateRouteTable",
            "aws_subnet.MyPrivateSubnet1",
            "aws_subnet.MyPublicSubnet1",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyPrivateAssociationPrivateSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ef965cbcff610a0",
            "route_table_id": "rtb-01eb4a8b5f09050e3",
            "subnet_id": "subnet-0ad3c77afcbe88cc4"
          },
          "dependencies": [
            "aws_eip.MyElasticIp",
            "aws_internet_gateway.MyInternetGateway",
            "aws_nat_gateway.MyNatGateway",
            "aws_route_table.MyPrivateRouteTable",
            "aws_subnet.MyPrivateSubnet2",
            "aws_subnet.MyPublicSubnet1",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyPublicAssociationPublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0331b8fa5181c3bce",
            "route_table_id": "rtb-06d334603ebe89be5",
            "subnet_id": "subnet-0e4cfb9a2b23aabaa"
          },
          "dependencies": [
            "aws_internet_gateway.MyInternetGateway",
            "aws_route_table.MyPublicRouteTable",
            "aws_subnet.MyPublicSubnet1",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyPublicAssociationPublicSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bae38bd915c02fd5",
            "route_table_id": "rtb-06d334603ebe89be5",
            "subnet_id": "subnet-037a532c854b24015"
          },
          "dependencies": [
            "aws_internet_gateway.MyInternetGateway",
            "aws_route_table.MyPublicRouteTable",
            "aws_subnet.MyPublicSubnet2",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MyLoadBalancerSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:security-group/sg-0e59edfd269a218b2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "enable outbound for all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e59edfd269a218b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "enable inbound HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "enable inbound HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240623094536360600000001",
            "name_prefix": "terraform-",
            "owner_id": "845537495355",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LoadBalancerSG"
            },
            "tags_all": {
              "Name": "LoadBalancerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c9365ae45f74d90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MyWebServerSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:security-group/sg-00a698a108448ec01",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "enable outbound for all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a698a108448ec01",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "enable inbound http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e59edfd269a218b2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServerSG",
            "name_prefix": "",
            "owner_id": "845537495355",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c9365ae45f74d90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.MyLoadBalancerSG",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyPrivateSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:subnet/subnet-0aa069120606a111d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa069120606a111d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "845537495355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyPrivateSubnet1"
            },
            "tags_all": {
              "Name": "MyPrivateSubnet1"
            },
            "vpc_id": "vpc-06c9365ae45f74d90"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyPrivateSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:subnet/subnet-0ad3c77afcbe88cc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad3c77afcbe88cc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "845537495355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyPrivateSubnet2"
            },
            "tags_all": {
              "Name": "MyPrivateSubnet2"
            },
            "vpc_id": "vpc-06c9365ae45f74d90"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyPublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:subnet/subnet-0e4cfb9a2b23aabaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4cfb9a2b23aabaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "845537495355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyPublicSubnet1"
            },
            "tags_all": {
              "Name": "MyPublicSubnet1"
            },
            "vpc_id": "vpc-06c9365ae45f74d90"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyPublicSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:subnet/subnet-037a532c854b24015",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037a532c854b24015",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "845537495355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyPublicSubnet2"
            },
            "tags_all": {
              "Name": "MyPublicSubnet2"
            },
            "vpc_id": "vpc-06c9365ae45f74d90"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:vpc/vpc-06c9365ae45f74d90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069250dfde1abb471",
            "default_route_table_id": "rtb-0b8c50c81f5f9f75b",
            "default_security_group_id": "sg-03bdb994bc10e9660",
            "dhcp_options_id": "dopt-054fcc2e14f4210ae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c9365ae45f74d90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8c50c81f5f9f75b",
            "owner_id": "845537495355",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}